logging replaced print

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -10,6 +10,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "546cd174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "0acc0352",
    "metadata": {
@@ -269,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2a57d18b",
    "metadata": {},
    "outputs": [],
@@ -280,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c686c922",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Dynamically detected stopwords are: ['aşı', 'çok', 'ama', 'gelip']\n"
+      "INFO:root:Dynamically detected stopwords are: aşı, çok, ama, gelip\n"
      ]
     }
    ],
@@ -299,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "8777a510",
    "metadata": {},
    "outputs": [
@@ -309,7 +321,7 @@
        "['aşı', 'çok', 'ama', 'gelip']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "29d8f913",
    "metadata": {},
    "outputs": [
@@ -340,7 +352,7 @@
        " 'bana']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,15 +363,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f1345356",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "List of stop words is unified and updated.\n"
+      "INFO:root:List of stop words is unified and updated.\n"
      ]
     }
    ],
@@ -369,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "a0f66703",
    "metadata": {},
    "outputs": [
@@ -389,7 +401,7 @@
        " 'aşı']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
