--- a/examples.ipynb
+++ b/examples.ipynb
@@ -420,20 +420,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "22a346aa",
+   "execution_count": 1,
+   "id": "5304138a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pp.tokenizer import Tokenizer\n",
-    "t = Tokenizer()"
+    "sentence = \"Beşiktaş'tan   vapura binip Kadıköy'e geçtim. E-mail adresim turkermeliksah@hotmail.com. İnternette #boğaziçi hashtag'ini gördüm. türk hava yolları test\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "3df479d2",
+   "execution_count": 3,
+   "id": "0b26470b",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\"Beşiktaş'tan\",\n",
+       " 'vapura',\n",
+       " 'binip',\n",
+       " \"Kadıköy'e\",\n",
+       " 'geçtim.',\n",
+       " 'E-mail',\n",
+       " 'adresim',\n",
+       " 'turkermeliksah@hotmail.com.',\n",
+       " 'İnternette',\n",
+       " 'boğaziçi',\n",
+       " \"hashtag'ini\",\n",
+       " 'gördüm.',\n",
+       " 'türk',\n",
+       " 'hava',\n",
+       " 'yolları',\n",
+       " 'test')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pp.tokenizer import Tokenizer\n",
+    "t = Tokenizer()\n",
+    "t.tokenize(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "627656f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import NLTKWordTokenizer, TweetTokenizer, WhitespaceTokenizer, WordPunctTokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "741a294b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -453,23 +502,62 @@
        " \"hashtag'ini\",\n",
        " 'gördüm',\n",
        " '.',\n",
-       " 'türk hava kurumu',\n",
        " 'türk',\n",
        " 'hava',\n",
-       " 'türk hava yolları',\n",
        " 'yolları',\n",
-       " 'test',\n",
-       " 'büyükşehir belediyesi',\n",
-       " 'uzaktan eğitim']"
+       " 'test']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t.tokenize(\"Beşiktaş'tan   vapura binip Kadıköy'e geçtim. E-mail adresim turkermeliksah@hotmail.com. İnternette #boğaziçi hashtag'ini gördüm. türk hava yolları test\")"
+    "t = TweetTokenizer()\n",
+    "t.tokenize(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "53bbf02c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beşiktaş'tan\n",
+      "  \n",
+      "vapura\n",
+      "binip\n",
+      "Kadıköy'e\n",
+      "geçtim.\n",
+      "E-mail\n",
+      "adresim\n",
+      "turkermeliksah@hotmail.com.\n",
+      "İnternette\n",
+      "#boğaziçi\n",
+      "hashtag'ini\n",
+      "gördüm.\n",
+      "türk\n",
+      "hava\n",
+      "yolları\n",
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy.tokenizer import Tokenizer\n",
+    "from spacy.lang.tr import Turkish\n",
+    "\n",
+    "nlp = Turkish()\n",
+    "tokenizer = Tokenizer(nlp.vocab)\n",
+    "tokens = tokenizer(sentence)\n",
+    "\n",
+    "for t in tokens:\n",
+    "    print(t)"
    ]
   },
   {
