--- a/examples.ipynb
+++ b/examples.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "546cd174",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0acc0352",
    "metadata": {
     "scrolled": true
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[dynet] random seed: 1367989442\n",
+      "[dynet] random seed: 2968441474\n",
       "[dynet] allocating memory: 512MB\n",
       "[dynet] memory allocation done.\n"
      ]
@@ -41,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-03 13:37:26,896 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
-      "2021-08-03 13:37:27,898 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
+      "2021-08-20 13:50:07,812 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
+      "2021-08-20 13:50:08,877 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "44ea67ca",
    "metadata": {},
    "outputs": [
@@ -65,21 +65,23 @@
        " 'doğum+Noun+A3sg+Pnon+Nom',\n",
        " 'gün+Noun+A3sg+P3sg+Acc',\n",
        " 'kutla+Verb+Pos^DB+Noun+Inf2+A3sg+Pnon+Acc',\n",
-       " 'unut+Verb+Pos^DB+Noun+Inf2+A3sg+Pnon+Nom']"
+       " 'unut+Verb+Pos^DB+Noun+Inf2+A3sg+Pnon+Nom',\n",
+       " 've+Conj',\n",
+       " 'kutla+Verb+Pos+Imp+A2sg']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ma.predict(\"Yarın ahmet'in doğum gününü kutlamayı unutma\")"
+    "ma.predict(\"Yarın ahmet'in doğum gününü kutlamayı unutma ve kutla\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "759a3633",
    "metadata": {},
    "outputs": [
@@ -89,7 +91,7 @@
        "['kut+Noun+A3sg+Pnon+Ins', 'oyna+Verb+Pos+Past+A1pl']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "549ef1f5",
    "metadata": {},
    "outputs": [
@@ -113,7 +115,7 @@
        " 'gün+Noun+A3sg+P3sg+Acc']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5103b0a3",
    "metadata": {},
    "outputs": [
@@ -137,7 +139,7 @@
        " 'oyna+Verb+Pos+Opt+A1pl']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8f8941f1",
    "metadata": {},
    "outputs": [],
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f61f31ca",
    "metadata": {},
    "outputs": [
@@ -196,7 +198,7 @@
        " 'türker']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a7be4284",
    "metadata": {},
    "outputs": [
@@ -218,7 +220,7 @@
        "['böyle', 'şey', 'görmedim', 'duymadım']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e1d4b2dc",
    "metadata": {},
    "outputs": [],
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "55c80eb9",
    "metadata": {},
    "outputs": [
@@ -259,7 +261,7 @@
        "['Kedimi çok seviyorum.', 'Sevgilim Av. Meryem ile 5.5 yıldır birlikteyiz.']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "2a57d18b",
    "metadata": {},
    "outputs": [],
@@ -292,36 +294,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "c686c922",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:root:Dynamically detected stopwords are: aşı, çok, ama, gelip\n"
+      "2021-08-20 13:50:37,881 - root - INFO - 55} - Dynamically detected stopwords are: ama, aşı, çok, telefon, gelip\n"
      ]
     }
    ],
    "source": [
-    "sentence = \"ben bugün aşı olacağım sonra da eve gelip telefon açacağım aşı nasıl etkiledi onu anlatırım aşı olmak bu dönemde çok ama çok önemli\"\n",
+    "sentence = \"ben bugün aşı olacağım sonra da eve gelip telefon açacağım aşı nasıl etkiledi onu anlatırım telefon aşı olmak bu dönemde çok ama ama ama ama çok önemli\"\n",
     "sr.dynamically_detect_stop_words(sentence.split(\" \"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "8777a510",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['aşı', 'çok', 'ama', 'gelip']"
+       "['ama', 'aşı', 'çok', 'telefon', 'gelip']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "29d8f913",
    "metadata": {},
    "outputs": [
@@ -352,7 +354,7 @@
        " 'bana']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,15 +365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "f1345356",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:root:List of stop words is unified and updated.\n"
+      "2021-08-20 13:50:37,898 - root - INFO - 62} - List of stop words is unified and updated.\n"
      ]
     }
    ],
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "a0f66703",
    "metadata": {},
    "outputs": [
@@ -401,7 +403,7 @@
        " 'aşı']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "c703834c",
    "metadata": {},
    "outputs": [],
@@ -430,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "6cb46c0b",
    "metadata": {},
    "outputs": [
@@ -455,7 +457,7 @@
        " 'test')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "a9bd7d7e",
    "metadata": {},
    "outputs": [],
@@ -478,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "33776fa0",
    "metadata": {
     "scrolled": true
@@ -508,7 +510,7 @@
        " 'test']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "04fd6480",
    "metadata": {},
    "outputs": [
