--- a/examples.ipynb
+++ b/examples.ipynb
@@ -177,10 +177,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f61f31ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['test',\n",
+       " 'için',\n",
+       " 'yazdığım',\n",
+       " 'bir',\n",
+       " 'cümledir',\n",
+       " 'yazım',\n",
+       " 'hatası',\n",
+       " 'ekliyorum',\n",
+       " 'benim',\n",
+       " 'adım',\n",
+       " 'melikşah',\n",
+       " 'türker']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sentence = \"Test için yâzdığîm 1 cümledir. Yazim hatasıı ekliyorum. benim adim meliksah turker.\"\n",
     "n.normalize(sentence.split(\" \"), normalize_via_levenshtein=True, deascify=True)"
@@ -188,10 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a7be4284",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['böyle', 'şey', 'görmedim', 'duymadım']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sentence = \"boyle sey gormedim duymadim\"\n",
     "n.normalize(sentence.split(\" \"), deascify= True)"
@@ -207,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e1d4b2dc",
    "metadata": {},
    "outputs": [],
@@ -218,10 +251,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "55c80eb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Kedimi çok seviyorum.', 'Sevgilim Av. Meryem ile 5.5 yıldır birlikteyiz.']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ss.split_sentences(\"Kedimi çok seviyorum. Sevgilim Av. Meryem ile 5.5 yıldır birlikteyiz.\")"
    ]
@@ -239,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2a57d18b",
    "metadata": {},
    "outputs": [],
@@ -250,10 +294,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c686c922",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-20 13:54:05,506 - root - INFO - 55} - Dynamically detected stopwords are: ama, aşı, çok, telefon, gelip\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = \"ben bugün aşı olacağım sonra da eve gelip telefon açacağım aşı nasıl etkiledi onu anlatırım telefon aşı olmak bu dönemde çok ama ama ama ama çok önemli\"\n",
     "sr.dynamically_detect_stop_words(sentence.split(\" \"))"
@@ -261,40 +313,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8777a510",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ama', 'aşı', 'çok', 'telefon', 'gelip']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sr.dynamic_stop_words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "29d8f913",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a',\n",
+       " 'acaba',\n",
+       " 'ama',\n",
+       " 'ancak',\n",
+       " 'arada',\n",
+       " 'artık',\n",
+       " 'asla',\n",
+       " 'aslında',\n",
+       " 'ayrıca',\n",
+       " 'az',\n",
+       " 'bana']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sr.stop_words[:11]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f1345356",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-20 13:54:05,523 - root - INFO - 62} - List of stop words is unified and updated.\n"
+     ]
+    }
+   ],
    "source": [
     "sr.unify_stop_words()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a0f66703",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a',\n",
+       " 'acaba',\n",
+       " 'ama',\n",
+       " 'ancak',\n",
+       " 'arada',\n",
+       " 'artık',\n",
+       " 'asla',\n",
+       " 'aslında',\n",
+       " 'ayrıca',\n",
+       " 'az',\n",
+       " 'aşı']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sr.stop_words[:11]"
    ]
@@ -309,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "c703834c",
    "metadata": {},
    "outputs": [],
@@ -319,10 +432,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6cb46c0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\"Beşiktaş'tan\",\n",
+       " 'vapura',\n",
+       " 'binip',\n",
+       " \"Kadıköy'e\",\n",
+       " 'geçtim.',\n",
+       " 'E-mail',\n",
+       " 'adresim',\n",
+       " 'turkermeliksah@hotmail.com.',\n",
+       " 'İnternette',\n",
+       " 'boğaziçi',\n",
+       " \"hashtag'ini\",\n",
+       " 'gördüm.',\n",
+       " 'türk',\n",
+       " 'hava',\n",
+       " 'yolları',\n",
+       " 'test')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pp.tokenizer import Tokenizer\n",
     "t = Tokenizer()\n",
@@ -331,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a9bd7d7e",
    "metadata": {},
    "outputs": [],
@@ -341,12 +480,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "33776fa0",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Beşiktaş'tan\",\n",
+       " 'vapura',\n",
+       " 'binip',\n",
+       " \"Kadıköy'e\",\n",
+       " 'geçtim',\n",
+       " '.',\n",
+       " 'E-mail',\n",
+       " 'adresim',\n",
+       " 'turkermeliksah@hotmail.com',\n",
+       " '.',\n",
+       " 'İnternette',\n",
+       " '#boğaziçi',\n",
+       " \"hashtag'ini\",\n",
+       " 'gördüm',\n",
+       " '.',\n",
+       " 'türk',\n",
+       " 'hava',\n",
+       " 'yolları',\n",
+       " 'test']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t = TweetTokenizer()\n",
     "t.tokenize(sentence)"
@@ -354,10 +522,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "04fd6480",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beşiktaş'tan\n",
+      "  \n",
+      "vapura\n",
+      "binip\n",
+      "Kadıköy'e\n",
+      "geçtim.\n",
+      "E-mail\n",
+      "adresim\n",
+      "turkermeliksah@hotmail.com.\n",
+      "İnternette\n",
+      "#boğaziçi\n",
+      "hashtag'ini\n",
+      "gördüm.\n",
+      "türk\n",
+      "hava\n",
+      "yolları\n",
+      "test\n"
+     ]
+    }
+   ],
    "source": [
     "from spacy.tokenizer import Tokenizer\n",
     "from spacy.lang.tr import Turkish\n",
