ref update on stopword detector

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[dynet] random seed: 3836824575\n",
+      "[dynet] random seed: 918083485\n",
       "[dynet] allocating memory: 512MB\n",
       "[dynet] memory allocation done.\n"
      ]
@@ -41,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-20 13:53:35,231 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
-      "2021-08-20 13:53:36,357 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
+      "2021-08-25 11:29:15,106 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
+      "2021-08-25 11:29:16,175 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
      ]
     }
    ],
@@ -53,99 +53,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "44ea67ca",
+   "execution_count": 67,
+   "id": "666fa2b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['yarın+Noun+A3sg+Pnon+Nom',\n",
-       " 'ahmet+Noun+Prop+A3sg+Pnon+Gen',\n",
-       " 'doğum+Noun+A3sg+Pnon+Nom',\n",
-       " 'gün+Noun+A3sg+P3sg+Acc',\n",
-       " 'kutla+Verb+Pos^DB+Noun+Inf2+A3sg+Pnon+Acc',\n",
-       " 'unut+Verb+Pos^DB+Noun+Inf2+A3sg+Pnon+Nom',\n",
-       " 've+Conj',\n",
-       " 'kutla+Verb+Pos+Imp+A2sg']"
+       "['üniversite+Noun+A3sg+Pnon+Nom',\n",
+       " 'sınav+Noun+A3pl+P3sg+Dat',\n",
+       " 'can+Noun+A3sg+Pnon+Ins',\n",
+       " 'baş+Noun+A3sg+Pnon+Ins',\n",
+       " 'çalış+Verb+Pos+Prog1+A3pl+Past']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ma.predict(\"Yarın ahmet'in doğum gününü kutlamayı unutma ve kutla\")"
+    "ma.predict(\"üniversite sınavlarına canla başla çalışıyorlardı\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "759a3633",
+   "execution_count": 71,
+   "id": "1cd536e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['kut+Noun+A3sg+Pnon+Ins', 'oyna+Verb+Pos+Past+A1pl']"
+       "['şimdi+Adverb', 'baş+Noun+A3sg+Pnon+Abl', 'başla+Verb+Pos+Imp+A2sg']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ma.predict(\"Kutla oynadık\")"
+    "ma.predict(\"şimdi baştan başla\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "549ef1f5",
+   "execution_count": 68,
+   "id": "9305f5a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['kutla+Verb+Pos+Imp+A2sg',\n",
-       " 'ahmet+Noun+Prop+A3sg+Pnon+Gen',\n",
-       " 'doğum+Noun+A3sg+Pnon+Nom',\n",
-       " 'gün+Noun+A3sg+P3sg+Acc']"
+       "['koş+Verb+Pos+Imp+A2sg',\n",
+       " 'da+Conj',\n",
+       " 'top+Noun+A3sg+P3sg+Nom',\n",
+       " 'at+Verb+Pos+Imp+A2sg']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ma.predict(\"Kutla ahmet'in doğum gününü\")"
+    "ma.predict(\"koş da topu at\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5103b0a3",
+   "execution_count": 69,
+   "id": "18b85d99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['gel+Verb+Pos+Imp+A2sg',\n",
-       " 'de+Conj',\n",
-       " 'oyun+Noun+A3sg+Pnon+Nom',\n",
-       " 'oyna+Verb+Pos+Opt+A1pl']"
+       "['baba+Noun+A3sg+P1sg+Nom',\n",
+       " 'ben+Pron+Pers+A1sg+Pnon+Dat',\n",
+       " 'at+Noun+A3sg+Pnon+Nom',\n",
+       " 'al+Verb+Pos+Past+A3sg']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ma.predict(\"gel de oyun oynayalım\")"
+    "ma.predict(\"babam bana at aldı\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "62fec447",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['başar+Verb+Pos^DB+Verb+Able^DB+Noun+PastPart+A3pl+P1sg+Gen']"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ma.predict(\"başarabildiklerimin\")"
    ]
   },
   {
@@ -166,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "8f8941f1",
    "metadata": {},
    "outputs": [],
@@ -177,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "f61f31ca",
    "metadata": {},
    "outputs": [
@@ -189,22 +207,24 @@
        " 'yazdığım',\n",
        " 'bir',\n",
        " 'cümledir',\n",
+       " 'kasıtlı',\n",
        " 'yazım',\n",
        " 'hatası',\n",
        " 'ekliyorum',\n",
-       " 'benim',\n",
        " 'adım',\n",
        " 'melikşah',\n",
-       " 'türker']"
+       " 'türker',\n",
+       " 'yaşım',\n",
+       " 'yirmisekiz']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentence = \"Test için yâzdığîm 1 cümledir. Yazim hatasıı ekliyorum. benim adim meliksah turker.\"\n",
+    "sentence = \"Test için yâzdığîm 1 cümledir. Kasitli yazişm hatasıı ekliyoruum. Adim meliksah turker, yasim 28.\"\n",
     "n.normalize(sentence.split(\" \"), normalize_via_levenshtein=True, deascify=True)"
    ]
   },
@@ -240,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "e1d4b2dc",
    "metadata": {},
    "outputs": [],
@@ -251,23 +271,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "55c80eb9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Kedimi çok seviyorum.', 'Sevgilim Av. Meryem ile 5.5 yıldır birlikteyiz.']"
+       "['Av. Meryem Beşer, 3.5 yıldır süren dava ile ilgili dedi ki, \"Duruşma bitti, dava lehimize sonuçlandı.\"',\n",
+       " 'Bu harika bir haber!']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ss.split_sentences(\"Kedimi çok seviyorum. Sevgilim Av. Meryem ile 5.5 yıldır birlikteyiz.\")"
+    "ss.split_sentences('Av. Meryem Beşer, 3.5 yıldır süren dava ile ilgili dedi ki, \"Duruşma bitti, dava lehimize sonuçlandı.\" Bu harika bir haber!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "663a1f6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['4. Murat, diğer yazım şekli ile IV. Murat, alkollü içecekleri halka yasaklamıştı.']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss.split_sentences('4. Murat, diğer yazım şekli ile IV. Murat, alkollü içecekleri halka yasaklamıştı.')"
    ]
   },
   {
@@ -283,13 +325,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "2a57d18b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pp.stopword_remover import StopwordRemover\n",
     "sr = StopwordRemover()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2dcbf959",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = \"acaba bugün kahvaltıda kahve yerine çay mı içsem ya da neyse süt içeyim\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ff326d8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bugün', 'kahvaltıda', 'kahve', 'çay', 'içsem', 'süt', 'içeyim']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sr.drop_stop_words(sentence.split(\" \"))"
    ]
   },
   {
@@ -334,33 +407,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
+   "id": "c446413c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "29d8f913",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a',\n",
-       " 'acaba',\n",
-       " 'ama',\n",
-       " 'ancak',\n",
-       " 'arada',\n",
-       " 'artık',\n",
-       " 'asla',\n",
-       " 'aslında',\n",
-       " 'ayrıca',\n",
-       " 'az',\n",
-       " 'bana']"
+       "array(['olan', 'mi', 'biz', 'birçok', 'bilhassa', 'şunları', 'olsun',\n",
+       "       'ediliyor', 'kendisine', 'benden'], dtype='<U11')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sr.stop_words[:11]"
+    "np.random.choice(sr.stop_words, 10)"
    ]
   },
   {
