normalizer now uses morphological analyzer to determine whether a word is valid in turkish

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[dynet] random seed: 918083485\n",
+      "[dynet] random seed: 3573440932\n",
       "[dynet] allocating memory: 512MB\n",
       "[dynet] memory allocation done.\n"
      ]
@@ -41,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-25 11:29:15,106 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
-      "2021-08-25 11:29:16,175 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
+      "2021-08-27 20:25:14,873 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
+      "2021-08-27 20:25:15,924 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
      ]
     }
    ],
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "666fa2b1",
+   "execution_count": 3,
+   "id": "99bfd060",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        " 'çalış+Verb+Pos+Prog1+A3pl+Past']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "1cd536e3",
+   "execution_count": 4,
+   "id": "544c70b9",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "['şimdi+Adverb', 'baş+Noun+A3sg+Pnon+Abl', 'başla+Verb+Pos+Imp+A2sg']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "9305f5a9",
+   "execution_count": 5,
+   "id": "47125b31",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        " 'at+Verb+Pos+Imp+A2sg']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "18b85d99",
+   "execution_count": 6,
+   "id": "1ac05cbc",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        " 'al+Verb+Pos+Past+A3sg']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,8 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "62fec447",
+   "execution_count": 7,
+   "id": "06a7af3a",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "['başar+Verb+Pos^DB+Verb+Able^DB+Noun+PastPart+A3pl+P1sg+Gen']"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,17 +177,27 @@
     "- Converts numbers to word form\n",
     "- Removes accent marks\n",
     "- Deascification\n",
-    "- Corrects typos using\n",
+    "- Corrects typos using:\n",
     "    - pre-defined typos lexicon\n",
-    "    - Levenshtein distance"
+    "    - Levenshtein distance\n",
+    "    - morphological analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "8f8941f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-27 20:25:17,558 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
+      "2021-08-27 20:25:18,565 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
+     ]
+    }
+   ],
    "source": [
     "from pp.normalizer import Normalizer\n",
     "n = Normalizer()"
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "f61f31ca",
    "metadata": {},
    "outputs": [
@@ -218,7 +228,7 @@
        " 'yirmisekiz']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a7be4284",
    "metadata": {},
    "outputs": [
@@ -240,7 +250,7 @@
        "['böyle', 'şey', 'görmedim', 'duymadım']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "e1d4b2dc",
    "metadata": {},
    "outputs": [],
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "55c80eb9",
    "metadata": {},
    "outputs": [
@@ -282,7 +292,7 @@
        " 'Bu harika bir haber!']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "663a1f6e",
+   "id": "a65a07c4",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "2a57d18b",
    "metadata": {},
    "outputs": [],
@@ -336,8 +346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "2dcbf959",
+   "execution_count": 15,
+   "id": "9f44702b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,8 +356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "ff326d8c",
+   "execution_count": 16,
+   "id": "34d8d94e",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +366,7 @@
        "['bugün', 'kahvaltıda', 'kahve', 'çay', 'içsem', 'süt', 'içeyim']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "c686c922",
    "metadata": {},
    "outputs": [
@@ -375,7 +385,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-20 13:54:05,506 - root - INFO - 55} - Dynamically detected stopwords are: ama, aşı, çok, telefon, gelip\n"
+      "2021-08-27 20:26:13,046 - root - INFO - 60} - Dynamically detected stopwords are: ama, aşı, çok, telefon, gelip\n"
      ]
     }
    ],
@@ -386,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "8777a510",
    "metadata": {},
    "outputs": [
@@ -396,7 +406,7 @@
        "['ama', 'aşı', 'çok', 'telefon', 'gelip']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,8 +417,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "c446413c",
+   "execution_count": 19,
+   "id": "601c3e24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,18 +427,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "29d8f913",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['olan', 'mi', 'biz', 'birçok', 'bilhassa', 'şunları', 'olsun',\n",
-       "       'ediliyor', 'kendisine', 'benden'], dtype='<U11')"
+       "array(['şunu', 'sanki', 'hem', 'hiç', 'gerek', 'tarafından', 'burada',\n",
+       "       'fakat', 'orada', 'kendisi'], dtype='<U11')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "f1345356",
    "metadata": {},
    "outputs": [
@@ -447,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-20 13:54:05,523 - root - INFO - 62} - List of stop words is unified and updated.\n"
+      "2021-08-27 20:26:13,071 - root - INFO - 67} - List of stop words is unified and updated.\n"
      ]
     }
    ],
@@ -457,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "a0f66703",
    "metadata": {},
    "outputs": [
@@ -477,7 +487,7 @@
        " 'aşı']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "c703834c",
    "metadata": {},
    "outputs": [],
@@ -506,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "6cb46c0b",
    "metadata": {},
    "outputs": [
@@ -531,7 +541,7 @@
        " 'test')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "a9bd7d7e",
    "metadata": {},
    "outputs": [],
@@ -554,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "33776fa0",
    "metadata": {
     "scrolled": true
@@ -584,7 +594,7 @@
        " 'test']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "04fd6480",
    "metadata": {},
    "outputs": [
@@ -634,14 +644,6 @@
     "\n",
     "for t in tokens:\n",
     "    print(t)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74d61130",
-   "metadata": {},
-   "source": [
-    "- Tokenization MWE ile düzgün çalışmıyor. Either debug or find another better tokenizer"
    ]
   }
  ],
